--- a/_posts/2021-03-01-create-ap.theme.md
+++ b/_posts/2021-03-01-create-ap.theme.md
@@ -6,7 +6,7 @@ tech : "Python(Pytorch)"
 type: Deep Learning
 ---
 
-## An Investigation of Visual Question Answering
+## An Investigation of Visual Question Answering(VQA)
 In teams of four, implemented two models from the literature of VQA: iBOWIMG and Deeper LSTM Q + norm and the results of the two models were reproduced. Investigated methods to improve the models. We incorporateed self-attention layers into the two models and we found that adding the self-attention layers lead to these models overfitting the datasets which decreased the performance. The code for this project is available [here](https://github.com/mlej8/VQA). I was mainly in charge of model implementation and data preprocessing.
 
 
